--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.24</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.7</version>
+    </dependency>
+
+
 
   </dependencies>
 </project>
